# -my_diary

./: .env.sample  README.md  diary_data.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  services.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_remove_entry_created_at_remove_entry_updated_at_and_more.py  0003_entry_image.py  0004_remove_entry_date_entry_created_at_entry_updated_at.py
diary/templates/diary/: base.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: generate.html  login.html  register.html  user_form.html
