[tool.poetry]
name = "my-diary"
version = "0.1.0"
description = ""
authors = ["Tatiana <tanyusha_tokor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
flake8 = "^7.1.1"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
